--- a/dhan-suvidha/package.json
+++ b/dhan-suvidha/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-otp-input": "^2.1.0",
     "react-phone-number-input": "^3.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
